Aalto-2015 configuration files

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "ext/tmc-sandbox"]
 	path = ext/tmc-sandbox
-	url = git@github.com:testmycode/tmc-sandbox.git
+	url = https://github.com/testmycode/tmc-sandbox.git
 [submodule "ext/tmc-junit-runner"]
 	path = ext/tmc-junit-runner
-	url = git@github.com:testmycode/tmc-junit-runner.git
+	url = https://github.com/testmycode/tmc-junit-runner.git
 [submodule "ext/tmc-comet"]
 	path = ext/tmc-comet
-	url = git@github.com:testmycode/tmc-comet.git
+	url = https://github.com/testmycode/tmc-comet.git
 [submodule "ext/tmc-spyware-server"]
 	path = ext/tmc-spyware-server
-	url = git@github.com:testmycode/tmc-spyware-server.git
+	url = https://github.com/testmycode/tmc-spyware-server.git
 [submodule "ext/tmc-checkstyle-runner"]
 	path = ext/tmc-checkstyle-runner
-	url = git@github.com:testmycode/tmc-checkstyle-runner.git
+	url = https://github.com/testmycode/tmc-checkstyle-runner.git
